--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,16 @@
 {
   "name": "FreezeTrack - Gestione Congelatore",
   "short_name": "FreezeTrack",
-  "description": "Gestisci congelatori e frigorifero con scansione barcode",
+  "description": "Gestisci congelatori e frigoriferi con sync cloud",
   "start_url": "./index.html",
   "scope": "./",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#0a1628",
   "theme_color": "#0a1628",
-  "categories": ["food", "utilities"],
   "lang": "it",
   "icons": [
-    {
-      "src": "./icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "./icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
+    { "src": "./icons/icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any maskable" },
+    { "src": "./icons/icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable" }
   ]
 }
